--- a/src/index.html
+++ b/src/index.html
@@ -218,6 +218,7 @@ Functions:
           timeZone: "Asia/Kolkata",
         });
         const remark = document.getElementById("remark").value;
+        console.log({ awb, datetime, remark });
 
         fetch("/api/submit", {
           method: "POST",
@@ -227,8 +228,8 @@ Functions:
           body: JSON.stringify({ awb, datetime, remark }),
         })
           .then((response) => response.json())
-          .then((data) => console.log("Success:", data))
-          .catch((error) => console.error("Error:", error));
+          .then((data) => alert(data.message))
+          .catch((error) => alert("Error submitting form: " + error.message));
       }
 
       function openQRScanner() {
