Rename project to AmazonFlex AWB Finder and update documentation; enhance database connection function comments and HTML title

--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@ Functions:
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AmazonFlex Order Issues</title>
+    <title>AmazonFlex AWB Finder</title>
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
@@ -134,7 +134,7 @@ Functions:
       <!-- Logo and Text Container -->
       <div class="logo-text-container">
         <img src="assets/flexlogo.png" alt="AmazonFlex Logo" />
-        <h3 class="AmazonFlex-text">AmazonFlex Order Tracker</h3>
+        <h3 class="AmazonFlex-text">AmazonFlex AWB Finder</h3>
       </div>
 
       <div class="input-field">
