Add disclaimer to README and index.html regarding tool's independence from Amazon

--- a/src/index.html
+++ b/src/index.html
@@ -179,8 +179,13 @@ Functions:
       "
     >
       <p class="white-text" style="margin: 5px 0; text-align: center">
-        This Web application is in no way connected with Amazon.com or
-        AmazonFlex. Any use is the sole responsibility of the user.
+        The AmazonFlex AWB Finder is an independent tool developed to assist
+        drivers in managing AWB numbers and storing for future reference. It is not
+        affiliated with, endorsed by, or officially connected to Amazon.com,
+        Inc., or its subsidiaries. Use of this tool is solely at the user's
+        discretion, and the developers are not responsible for any inaccuracies,
+        delays, or issues arising from its use. Always ensure compliance with
+        Amazon's terms and policies while using third-party tools.
       </p>
       <div
         class="container center-align"
